<resources>
    <string name="app_name">The Shoe Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="welcome_to_shoes_shop">Welcome to Shoes Shop</string>
    <string name="thank_you_for_choosing_our_store">Thank you for Choosing Our Store</string>
    <string name="register">Register</string>
    <string name="next">Next</string>
</resources>